# tink-go-gcpkms

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  version.bzl
integration/gcpkms/: BUILD.bazel  checksum.go  common.go  gcp_kms_aead.go  gcp_kms_aead_test.go  gcp_kms_client.go  gcp_kms_client_test.go  gcp_kms_grpc_aead.go  gcp_kms_grpc_aead_test.go  gcp_kms_grpc_mac.go  gcp_kms_grpc_mac_test.go  gcp_kms_grpc_signer.go  gcp_kms_grpc_signer_test.go  gcp_kms_grpc_verifier.go  gcp_kms_grpc_verifier_test.go  gcp_kms_integration_test.go  mock_kms_test.go
kokoro/: create_github_release_branch.sh  create_github_release_tag.sh
kokoro/gcp_ubuntu/bazel/: run_tests.sh
kokoro/gcp_ubuntu/gomod/: run_tests.sh
kokoro/macos_external/bazel/: run_tests.sh
kokoro/macos_external/gomod/: run_tests.sh
kokoro/testutils/: go_test_container_images.sh
